force-app/main/default/objects/Event_Booking__c/Event_Booking__c.object-meta.xml
<CustomObject>
    <description>Confirmed bookings and commercial details for event-service delivery.</description>
    <label>Event Booking</label>
    <nameField>
        <displayFormat>EB-{0000}</displayFormat>
        <label>Event Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>