force-app/main/default/objects/Event_Booking__c/fields/Event_Service__c.field-meta.xml
<CustomField>
    <fullName>Event_Service__c</fullName>
    <label>Event Service</label>
    <referenceTo>Event_Service__c</referenceTo>
    <relationshipLabel>Event Bookings</relationshipLabel>
    <relationshipName>EventBookings</relationshipName>
    <type>Lookup</type>
</CustomField>