force-app/main/default/objects/Event_Booking__c/fields/Guest_Count__c.field-meta.xml
<CustomField>
    <fullName>Guest_Count__c</fullName>
    <label>Guest Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>