force-app/main/default/objects/Event_Booking__c/fields/Package_Tier__c.field-meta.xml
<CustomField>
    <fullName>Package_Tier__c</fullName>
    <label>Package Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Essential</fullName>
                <default>true</default>
                <label>Essential</label>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>